tests/expect/error/on-output/access-symbol-from-inner-scope-in-outer.nva
if true {
    inner := "inner";
}

print(inner);